--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -21,12 +21,15 @@
 
     const el = <div className>{children}</div>;
 
+    const props = { children, className }
+    const elementTwo = <div { ...props } /> // how do I apply props to this div?
+
     // 💰 there are a few subtle differences between JSX and HTML. One such
     // difference is how you apply a class to an element in JSX is by using
     // `className` rather than `class`!
     // 📜 You can learn the differences between JSX and HTML syntax from the React docs here:
     // https://reactjs.org/docs/dom-elements.html#differences-in-attributes
 
-    ReactDOM.render(el, document.getElementById('root'))
+    ReactDOM.render(elementTwo, document.getElementById('root'))
   </script>
 </body>
